--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,9 @@
   },
   "plugins": ["react", "react-native"],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "no-console": 0,
+    // allow for styles to be defined at bottom of file
+    "no-use-before-define": ["error", { "variables": false }]
   }
 }
