Implemented basic fetch and tab navigation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "no-console": 0,
+    "react/jsx-props-no-spreading": 0,
     // allow for styles to be defined at bottom of file
     "no-use-before-define": ["error", { "variables": false }]
   }
