--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@rneui/base": "^4.0.0-rc.5",
     "@rneui/themed": "^4.0.0-rc.5",
+    "@rnhooks/async-storage": "^0.0.2",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "react": "18.0.0",
     "react-native": "0.69.2",
     "react-native-safe-area-context": "^4.3.1",
