--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rnhooks/async-storage": "^0.0.2",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-native": "0.69.2",
     "react-native-safe-area-context": "^4.3.1",
