--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.8.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@rneui/base": "^4.0.0-rc.5",
     "@rneui/themed": "^4.0.0-rc.5",
@@ -22,8 +23,8 @@
     "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-native": "0.69.2",
-    "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
