--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.7",
-    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/cli": "^14.0.1",
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
@@ -24,13 +25,14 @@
     "@rnhooks/async-storage": "^0.0.2",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
+    "patch-package": "^8.0.0",
     "prop-types": "^15.8.1",
     "qs": "^6.12.3",
-    "react": "18.0.0",
-    "react-native": "0.69.2",
-    "react-native-gesture-handler": "^2.11.0",
-    "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0",
+    "react": "18.3.1",
+    "react-native": "0.75.2",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^13.10.5",
     "react-redux": "^8.0.2",
@@ -39,23 +41,24 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "babel-jest": "^26.6.3",
-    "eslint": "^8.20.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-native": "^4.0.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.70.3",
-    "prettier": "2.7.1",
-    "react-test-renderer": "18.0.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.75.2",
+    "@react-native/eslint-config": "0.75.2",
+    "@react-native/metro-config": "0.75.2",
+    "@react-native/typescript-config": "0.75.2",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.3.1",
+    "typescript": "5.0.4"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "yarn@3.6.4"
 }
