--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   },
   "plugins": ["react", "react-native"],
   "rules": {
+    "react/require-default-props": [0],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "no-console": 0,
     "react/jsx-props-no-spreading": 0,
