--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.7",
+    "@jest/globals": "^29.7.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/cli": "^14.0.1",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
@@ -30,6 +32,9 @@
     "qs": "^6.12.3",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-blasted-image": "^1.0.3",
+    "react-native-error-boundary": "^1.2.4",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
@@ -44,6 +49,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@eslint/js": "^9.9.1",
     "@react-native/babel-preset": "0.75.2",
     "@react-native/eslint-config": "0.75.2",
     "@react-native/metro-config": "0.75.2",
@@ -51,7 +57,14 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.35.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-native": "^4.1.0",
+    "globals": "^15.9.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
