--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-error-boundary": "^1.2.4",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-rename": "^3.2.14",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^9.2.0",
