Changed app name

--- a/ios/Cheapsk8te.xcodeproj/xcshareddata/xcschemes/Cheapsk8te.xcscheme
+++ b/ios/Cheapsk8te.xcodeproj/xcshareddata/xcschemes/Cheapsk8te.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Stingy.app"
-               BlueprintName = "Stingy"
-               ReferencedContainer = "container:Stingy.xcodeproj">
+               BuildableName = "Cheapsk8te.app"
+               BlueprintName = "Cheapsk8te"
+               ReferencedContainer = "container:Cheapsk8te.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "StingyTests.xctest"
-               BlueprintName = "StingyTests"
-               ReferencedContainer = "container:Stingy.xcodeproj">
+               BuildableName = "Cheapsk8teTests.xctest"
+               BlueprintName = "Cheapsk8teTests"
+               ReferencedContainer = "container:Cheapsk8te.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Stingy.app"
-            BlueprintName = "Stingy"
-            ReferencedContainer = "container:Stingy.xcodeproj">
+            BuildableName = "Cheapsk8te.app"
+            BlueprintName = "Cheapsk8te"
+            ReferencedContainer = "container:Cheapsk8te.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Stingy.app"
-            BlueprintName = "Stingy"
-            ReferencedContainer = "container:Stingy.xcodeproj">
+            BuildableName = "Cheapsk8te.app"
+            BlueprintName = "Cheapsk8te"
+            ReferencedContainer = "container:Cheapsk8te.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
