--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,7 +14,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'Stingy' do
+target 'Cheapsk8te' do
   config = use_native_modules!
 
   use_react_native!(
@@ -23,7 +23,7 @@ target 'Stingy' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'StingyTests' do
+  target 'Cheapsk8teTests' do
     inherit! :complete
     # Pods for testing
   end
