--- a/ios/Cheapsk8te.xcodeproj/xcshareddata/xcschemes/Cheapsk8te.xcscheme
+++ b/ios/Cheapsk8te.xcodeproj/xcshareddata/xcschemes/Cheapsk8te.xcscheme
@@ -60,6 +60,12 @@
             ReferencedContainer = "container:Cheapsk8te.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
