--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-rename": "^3.2.14",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^13.10.5",
     "react-redux": "^8.0.2",
