added firebase storage and reworked how favourites get stored

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["COLOUR", "Colours", "favourites", "Pressable"]
+  "cSpell.words": ["COLOUR", "Colours", "favourites", "firestore", "Pressable"]
 }
