--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/analytics": "^20.4.0",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
+    "@react-native-firebase/firestore": "^20.4.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.8.0",
@@ -29,6 +30,7 @@
     "@rneui/themed": "^4.0.0-rc.5",
     "@rnhooks/async-storage": "^0.0.2",
     "axios": "^0.27.2",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "patch-package": "^8.0.0",
     "prop-types": "^15.8.1",
