--- a/ios/Cheapsk8te/Info.plist
+++ b/ios/Cheapsk8te/Info.plist
@@ -39,7 +39,7 @@
 		<string>FontAwesome.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>BootSplash</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
