--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.75.2",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-blasted-image": "^1.0.3",
+    "react-native-bootsplash": "^6.1.3",
     "react-native-error-boundary": "^1.2.4",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "^2.19.0",
